[gd_scene load_steps=12 format=3 uid="uid://bxfyayjkalx4w"]

[ext_resource type="Script" uid="uid://u18ug6ccun7f" path="res://src/level/random_battle.gd" id="1_dj6d0"]
[ext_resource type="PackedScene" uid="uid://b3ml34bssywkr" path="res://scene/player.tscn" id="2_ebfva"]
[ext_resource type="PackedScene" uid="uid://dwvyc2qlcdag0" path="res://scene/chessboard_large.tscn" id="3_dufkl"]
[ext_resource type="PackedScene" uid="uid://8kbw64nuq0ai" path="res://assets/model/fence_turn.glb" id="7_ireu6"]
[ext_resource type="PackedScene" uid="uid://d13fcqueggvup" path="res://assets/model/fence.glb" id="7_kgd4m"]
[ext_resource type="Script" uid="uid://bt4vtnpxu5i4x" path="res://src/actor.gd" id="8_gxodr"]
[ext_resource type="PackedScene" uid="uid://dgvq7kuhcahlb" path="res://scene/teleport_pointer.tscn" id="13_gnq6v"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_not3w"]
sky_top_color = Color(1, 1, 1, 1)
sky_horizon_color = Color(1, 1, 1, 1)
sky_curve = 0.5795615

[sub_resource type="Sky" id="Sky_cdevh"]
sky_material = SubResource("ProceduralSkyMaterial_not3w")

[sub_resource type="Environment" id="Environment_w3jsn"]
background_mode = 2
sky = SubResource("Sky_cdevh")
ssr_enabled = true
ssr_max_steps = 32
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.77, 0.1848, 0.1848, 1)
fog_density = 1.0
volumetric_fog_albedo = Color(0.7058824, 0.007843138, 0, 1)
volumetric_fog_emission = Color(0.704499, 0.009784789, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_not3w"]
albedo_color = Color(0.89492244, 0.89492244, 0.8949224, 1)
metallic = 1.0
roughness = 0.24

[node name="random_battle" type="Node3D"]
script = ExtResource("1_dj6d0")
metadata/by = 4
metadata/map_pos = Vector2i(0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w3jsn")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="player" parent="." instance=ExtResource("2_ebfva")]

[node name="chessboard" parent="." instance=ExtResource("3_dufkl")]
metadata/_edit_lock_ = true

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(-1, 7.5710346e-08, -4.3711385e-08, 0, 0.49999997, 0.86602545, 8.742278e-08, 0.86602545, -0.49999997, 0, 12, -9.734552)

[node name="teleport_pointer_1" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, 1, 0, 7)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 4
}

[node name="teleport_pointer_2" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, -1, 0, 7)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 3
}

[node name="teleport_pointer_3" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 1, 0, -7)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 116
}

[node name="teleport_pointer_4" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -1, 0, -7)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 115
}

[node name="teleport_pointer_5" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(-2.1855695e-07, 0, -1, 0, 1, 0, 1, 0, -2.1855695e-07, -7, 0, 0.9999997)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 71
}

[node name="teleport_pointer_6" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(-2.1855695e-07, 0, -1, 0, 1, 0, 1, 0, -2.1855695e-07, -7, 0, -1.0000004)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 55
}

[node name="teleport_pointer_7" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 7, 0, 1.0000004)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 64
}

[node name="teleport_pointer_8" parent="." instance=ExtResource("13_gnq6v")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 7, 0, -0.9999997)
visible = false
to = "res://scene/level/random_battle.tscn"
args = {
"by": 48
}

[node name="csg_box_3d" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.10000038, -8.502441, -9.020386)
size = Vector3(16, 17, 2)
material = SubResource("StandardMaterial3D_not3w")

[node name="csg_box_3d_2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.887945, -8.502441, 0)
size = Vector3(2, 17, 20)
material = SubResource("StandardMaterial3D_not3w")

[node name="csg_box_3d_3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.958649, -8.502441, 0)
size = Vector3(2, 17, 20)
material = SubResource("StandardMaterial3D_not3w")

[node name="csg_box_3d_4" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.054027557, -8.502441, 9.01297)
size = Vector3(16.021355, 17, 2)
material = SubResource("StandardMaterial3D_not3w")

[node name="fence_0" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, 7, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_1" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, 5, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_2" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, 3, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_3" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, -3, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_4" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, -5, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_5" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, -7, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_6" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-1, 0, 8.742279e-08, 0, 1, 0, -8.742279e-08, 0, -1, -7, 0, -9.000001)
script = ExtResource("8_gxodr")

[node name="fence_7" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-1, 0, 8.742279e-08, 0, 1, 0, -8.742279e-08, 0, -1, -5, 0, -9)
script = ExtResource("8_gxodr")

[node name="fence_8" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-1, 0, 8.742279e-08, 0, 1, 0, -8.742279e-08, 0, -1, -3, 0, -9)
script = ExtResource("8_gxodr")

[node name="fence_9" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-1, 0, 8.742279e-08, 0, 1, 0, -8.742279e-08, 0, -1, 3, 0, -9)
script = ExtResource("8_gxodr")

[node name="fence_10" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-1, 0, 8.742279e-08, 0, 1, 0, -8.742279e-08, 0, -1, 5, 0, -9)
script = ExtResource("8_gxodr")

[node name="fence_11" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-1, 0, 8.742279e-08, 0, 1, 0, -8.742279e-08, 0, -1, 7, 0, -8.999999)
script = ExtResource("8_gxodr")

[node name="fence_turn_0" parent="." instance=ExtResource("7_ireu6")]
transform = Transform3D(1, 0, 1.7484598e-07, 0, 1, 0, -1.7484598e-07, 0, 1, 9, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_turn_1" parent="." instance=ExtResource("7_ireu6")]
transform = Transform3D(-1, 0, -2.6226877e-07, 0, 1, 0, 2.6226877e-07, 0, -1, -9, 0, -9)
script = ExtResource("8_gxodr")

[node name="fence_12" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, 6.9999995)
script = ExtResource("8_gxodr")

[node name="fence_13" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, 4.9999995)
script = ExtResource("8_gxodr")

[node name="fence_14" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, 2.9999995)
script = ExtResource("8_gxodr")

[node name="fence_15" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, -3.0000005)
script = ExtResource("8_gxodr")

[node name="fence_16" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, -5.0000005)
script = ExtResource("8_gxodr")

[node name="fence_17" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, -7.0000005)
script = ExtResource("8_gxodr")

[node name="fence_18" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1.3113419e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113419e-07, 9.000001, 0, -6.9999995)
script = ExtResource("8_gxodr")

[node name="fence_19" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1.3113419e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113419e-07, 9, 0, -4.9999995)
script = ExtResource("8_gxodr")

[node name="fence_20" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1.3113419e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113419e-07, 9, 0, -2.9999995)
script = ExtResource("8_gxodr")

[node name="fence_21" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1.3113419e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113419e-07, 9, 0, 3.0000005)
script = ExtResource("8_gxodr")

[node name="fence_22" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1.3113419e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113419e-07, 9, 0, 5.0000005)
script = ExtResource("8_gxodr")

[node name="fence_23" parent="." instance=ExtResource("7_kgd4m")]
transform = Transform3D(1.3113419e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113419e-07, 8.999999, 0, 7.0000005)
script = ExtResource("8_gxodr")

[node name="fence_turn_2" parent="." instance=ExtResource("7_ireu6")]
transform = Transform3D(1.3113458e-07, 0, -1, 0, 1, 0, 1, 0, 1.3113458e-07, -9, 0, 9)
script = ExtResource("8_gxodr")

[node name="fence_turn_3" parent="." instance=ExtResource("7_ireu6")]
transform = Transform3D(-2.1855737e-07, 0, 1, 0, 1, 0, -1, 0, -2.1855737e-07, 9, 0, -9)
script = ExtResource("8_gxodr")
